--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "react-native-maps-routes",
-  "version": "0.0.1",
+  "name": "@pedi/react-native-maps-routes",
+  "version": "0.0.2",
   "description": "Route component for react-native-maps",
   "author": {
     "name": "Hugo EXTRAT",
     "email": "extrat.h@gmail.com",
     "url": "https://www.github.com/huextrat"
   },
+  "contributors": [
+    {
+      "name": "Shindou Mihou",
+      "email": "hello@mihou.dev",
+      "url": "https://www.github.com/ShindouMihou"
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/huextrat/react-native-maps-routes"
@@ -59,5 +66,6 @@
     "react-native-maps": "1.20.1",
     "semantic-release": "24.2.1",
     "typescript": "5.7.3"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
